Se eliminan ficheros generados de documentación. Se optimiza configuración de jackson